--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -10,7 +10,10 @@ from itertools import combinations
 min_version("6.0")
 
 # Configuration
-configfile: "config.yaml"
+workflow:
+    workdir: ..
+
+configfile: "config/config.yaml"
 analysis = config['full_analysis']
 
 # Define patterns and envs
@@ -86,7 +89,7 @@ DATA_TYPES = set(samples["data_type"].unique())
 REPO_FOLDER = config["repo_folder"]
 
 # Define the conda environment to build
-CONDA_ENV=os.path.join(REPO_FOLDER,"envs/epibutton.yaml")
+CONDA_ENV=os.path.join(REPO_FOLDER,"workflow","envs","epibutton.yaml")
 
 # Define label for the analysis
 analysis_name = config["analysis_name"]
@@ -142,8 +145,8 @@ analysis_samples = (
 # Add a sample_name column to the analysis_sample file
 analysis_samples["sample_name"] = analysis_samples.apply(lambda row: sample_name_str(row, 'analysis'), axis=1)
 
-# Save the result to 'analysis_samplefile.txt'
-analysis_samples.to_csv(f"{analysis_name}__analysis_samplefile.txt", sep="\t", index=False)
+# # Save the result to 'analysis_samplefile.txt'
+# analysis_samples.to_csv(f"{analysis_name}__analysis_samplefile.txt", sep="\t", index=False)
 
 # To assign all replicates to each sample
 analysis_to_replicates = (
@@ -165,22 +168,22 @@ include: "rules/plotting_with_R.smk"
 # Rule all to specify final target
 rule all:
     input:
-	    expand(f"chkpts/combined_analysis__{analysis_name}.done", analysis_name = analysis_name)
+	    expand(f"results/chkpts/combined_analysis__{analysis_name}.done", analysis_name = analysis_name)
     localrule: True
 
 ### Intermediate target rules
 # Rule to specify final target if only mapping is required
 rule map_only:
     input:
-        expand("combined/plots/mapping_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["ChIP","TF","RNA","mC"]]),
-        expand("combined/plots/srna_sizes_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["sRNA"]])
+        expand("results/combined/plots/mapping_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["ChIP","TF","RNA","mC"]]),
+        expand("results/combined/plots/srna_sizes_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["sRNA"]])
     localrule: True
 
 # Rule to specify final target if only chip coverage is wanted
 rule coverage_chip:
     input: 
         [
-            f"ChIP/tracks/coverage__{sample_name}.bw"
+            f"results/ChIP/tracks/coverage__{sample_name}.bw"
             for sample_name in get_sample_names_by_env("ChIP", samples)
         ]
     localrule: True
@@ -188,17 +191,17 @@ rule coverage_chip:
 # Rule to perform combined analysis
 rule combined_analysis:
     input:
-        expand("chkpts/ref__{ref_genome}.done", ref_genome=REF_GENOMES),
-        expand("ChIP/chkpts/ChIP_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "ChIP" in UNIQUE_ENVS else []),
-        expand("TF/chkpts/ChIP_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "TF" in UNIQUE_ENVS else []),
-        expand("RNA/chkpts/RNA_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "RNA" in UNIQUE_ENVS else []),
-        expand("mC/chkpts/mC_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "mC" in UNIQUE_ENVS else []),
-        expand("sRNA/chkpts/sRNA_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "sRNA" in UNIQUE_ENVS else []),
-        expand("combined/plots/mapping_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["ChIP","TF","RNA","mC"]]),
-        expand("combined/plots/srna_sizes_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["sRNA"]]),
-        expand("combined/plots/peak_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["ChIP","TF"]])
+        expand("results/chkpts/ref__{ref_genome}.done", ref_genome=REF_GENOMES),
+        expand("results/ChIP/chkpts/ChIP_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "ChIP" in UNIQUE_ENVS else []),
+        expand("results/TF/chkpts/ChIP_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "TF" in UNIQUE_ENVS else []),
+        expand("results/RNA/chkpts/RNA_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "RNA" in UNIQUE_ENVS else []),
+        expand("results/mC/chkpts/mC_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "mC" in UNIQUE_ENVS else []),
+        expand("results/sRNA/chkpts/sRNA_analysis__{analysis_name}__{ref_genome}.done", analysis_name = analysis_name, ref_genome=REF_GENOMES if "sRNA" in UNIQUE_ENVS else []),
+        expand("results/combined/plots/mapping_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["ChIP","TF","RNA","mC"]]),
+        expand("results/combined/plots/srna_sizes_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["sRNA"]]),
+        expand("results/combined/plots/peak_stats_{analysis_name}_{env}.pdf", analysis_name = analysis_name, env=[env for env in UNIQUE_ENVS if env in ["ChIP","TF"]])
     output:
-        chkpt = f"chkpts/combined_analysis__{analysis_name}.done"
+        chkpt = f"results/chkpts/combined_analysis__{analysis_name}.done"
     localrule: True
     shell:
         """
