--- a/profiles/sge/config.yaml
+++ b/profiles/sge/config.yaml
@@ -13,5 +13,5 @@ cluster: >-
   -l m_mem_free={cluster.mem_mb}M
   -l tmp_free={cluster.tmp_mb}M
   -N smk_{jobid}
-  -o results/hpclogs/{rule}
-  -e results/hpclogs/{rule}
+  -o hpclogs/{rule}
+  -e hpclogs/{rule}
