--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -78,3 +78,4 @@ filter_size_srna_sample: *standard
 merging_srna_replicates: *standard
 make_srna_stranded_bigwigs: *standard
 analyze_all_srna_samples: *heavy
+analyze_all_srna_samples_on_target_file: *heavy
