--- a/config/config.yaml
+++ b/config/config.yaml
@@ -132,8 +132,10 @@ srna_max_size: 24 # these sizes in nucleotide will be used for filtering bigiwg 
 go_database: "data/org.Zmays.eg.db" # default to GO database from Zea mays present in data directory, prepared with Annotation Forge (see corresponding Help)
 
 # optional targets for extra output
-plot_target_file: "config/target_genes.txt" # default gene list format for plotting gene expression. Replace with actual file of target genes, and potentially update the label below too.
-target_file_label: "" # When blank, it will use the name of the plot_target_file (i.e "target_genes")
+rnaseq_target_file: "config/target_genes.txt" # default gene list format for plotting gene expression. Replace with actual file of target genes, and potentially update the label below too.
+rnaseq_target_file_label: "" # When blank, it will use the name of the plot_target_file (i.e "target_genes")
+srna_target_file: "config/miRNA.txt" # Replace with another file of target genes if sRNA should be performed on other loci.
+srna_target_file_label: "miRNA" # This name will be used for the results folder and should be the target of the rule
 
 # Analysis parameters
 analysis:
@@ -231,3 +233,4 @@ resources:
   merging_srna_replicates: *standard
   make_srna_stranded_bigwigs: *standard
   analyze_all_srna_samples: *heavy
+  analyze_all_srna_samples_on_target_file: *heavy
