--- a/config/config.yaml
+++ b/config/config.yaml
@@ -132,10 +132,11 @@ srna_max_size: 24 # these sizes in nucleotide will be used for filtering bigiwg 
 go_database: "data/org.Zmays.eg.db" # default to GO database from Zea mays present in data directory, prepared with Annotation Forge (see corresponding Help)
 
 # optional targets for extra output
-rnaseq_target_file: "config/target_genes.txt" # default gene list format for plotting gene expression. Replace with actual file of target genes, and potentially update the label below too.
-rnaseq_target_file_label: "" # When blank, it will use the name of the plot_target_file (i.e "target_genes")
-srna_target_file: "config/miRNA.txt" # Replace with another file of target genes if sRNA should be performed on other loci.
-srna_target_file_label: "miRNA" # This name will be used for the results folder and should be the target of the rule
+rnaseq_expression_target_file: "data/target_genes.txt" # default gene list format (based on Arabisopsis ColCEN) for plotting gene expression. Replace with actual file of target genes, and potentially update the label below too.
+rnaseq_expression_target_file_label: "" # When blank, it will use the name of the plot_target_file (i.e "target_genes")
+
+srna_target_file: "config/ath.gff3" # Replace with another file of target genes if sRNA should be performed on other loci. It will be used as LOCIFILE in ShortStack (Can be simple tab-delimited, .bed, or .gff3. Tab-delimited format is column 1 with coordinates Chr:start-stop, column 2 with names. Input file assumed to be simple tab-delimited unless file name ends in .bed or .gff3.)
+srna_target_file_label: "miRNAs" # This name will be used for the results folder and should be the target of the rule
 
 # Analysis parameters
 analysis:
