--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -77,5 +77,6 @@ make_srna_size_stats: *standard
 filter_size_srna_sample: *standard
 merging_srna_replicates: *standard
 make_srna_stranded_bigwigs: *standard
-analyze_all_srna_samples: *heavy
 analyze_all_srna_samples_on_target_file: *heavy
+prep_files_for_differential_srna_clusters: *single
+call_all_differential_srna_clusters: *single
