--- a/profiles/sge/config.yaml
+++ b/profiles/sge/config.yaml
@@ -13,5 +13,5 @@ cluster: >-
   -l m_mem_free={cluster.mem_mb}M
   -l tmp_free={cluster.tmp_mb}M
   -N smk_{jobid}
-  -o hpclogs/{rule}/{jobid}.log
-  -e hpclogs/{rule}/{jobid}.log
+  -o hpclogs/{rule}/smk_{jobid}.log
+  -e hpclogs/{rule}/smk_{jobid}.log
