--- a/profiles/slurm/config.yaml
+++ b/profiles/slurm/config.yaml
@@ -14,3 +14,4 @@ cluster: >-
   --mem={cluster.mem_mb}
   --output=hpclogs/{rule}/smk_{jobid}.log
   --error=hpclogs/{rule}/smk_{jobid}.log
+  {cluster.qos}
