--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -1,12 +1,12 @@
 __default__: &default
   mem_mb: 32
   tmp_mb: 32
-  qos: "--qos=fast"
+  qos: "--qos='fast'"
 
 low_resources: &low
   mem_mb: 1000
   tmp_mb: 1000
-  qos: "--qos=fast"
+  qos: "--qos='fast'"
 
 standard_resources: &standard
   mem_mb: 2000
@@ -21,7 +21,7 @@ heavy_resources: &heavy
 max_resources: &max
   mem_mb: 10000
   tmp_mb: 96000
-  qos: "--qos=slow_nice"
+  qos: "--qos='slow_nice'"
 
 single_thread: &single
   mem_mb: 32000
