--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -1,32 +1,32 @@
 __default__: &default
   mem_mb: 32
   tmp_mb: 32
-  qos: "fast"
+  qos: fast
 
 low_resources: &low
   mem_mb: 1000
   tmp_mb: 1000
-  qos: "fast"
+  qos: fast
 
 standard_resources: &standard
   mem_mb: 2000
   tmp_mb: 2000
-  qos: "default"
+  qos: default
 
 heavy_resources: &heavy
   mem_mb: 8000
   tmp_mb: 48000
-  qos: "default"
+  qos: default
   
 max_resources: &max
   mem_mb: 10000
   tmp_mb: 96000
-  qos: "slow_nice"
+  qos: slow_nice
 
 single_thread: &single
   mem_mb: 32000
   tmp_mb: 48000
-  qos: "default"
+  qos: default
 
 check_fasta: *standard
 check_gff: *standard
