--- a/workflow/envs/epibutton.yaml
+++ b/workflow/envs/epibutton.yaml
@@ -34,5 +34,9 @@ dependencies:
   - bioconductor-edger
   - r-stringr
   - r-gplots
+  - bioconductor-annotationforge
+  - bioconductor-rrvgo
+  - bioconductor-topGO
+  - r-purrr
 
 
