--- a/config/config.yaml
+++ b/config/config.yaml
@@ -135,14 +135,14 @@ srna_mapping_params: "--mmap u --dicermin 21 --dicermax 24 --dn_mirna --no_bigwi
 srna_min_size: 21 # these sizes in nucleotide will be used for filtering bigiwg and creating an individual file for each nucleotide size in between (e.g. 20 21 22 23 24)
 srna_max_size: 24 # these sizes in nucleotide will be used for filtering bigiwg and creating an individual file for each nucleotide size in between (e.g. 20 21 22 23 24)
 
-# Gene Ontology parameters to create a new database (make sure you match the reference genome(s) present in the samplefile)
+# Gene Ontology files to create a new database (make sure you match the reference genome(s) present in the samplefile)
 gaf_file:
-  ColCEN: "data/ColCEN_infoGO.tab"
-  B73_v5: "data/B73_v5_infoGO.tab"
+  ColCEN: "data/ColCEN_infoGO.tab.gz"
+  B73_v5: "data/B73_v5_infoGO.tab.gz"
 
 gene_info_file:
-  ColCEN: "data/ColCEN_genes_info.tab"
-  B73_v5: "data/B73_v5_genes_info.tab"
+  ColCEN: "data/ColCEN_genes_info.tab.gz"
+  B73_v5: "data/B73_v5_genes_info.tab.gz"
 
 # optional targets for extra output
 rnaseq_target_file_label: "target_genes" # This name will be used for the name of the results files and should used in the rule target.
