--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 # Path to the working directory where the repository was cloned
-repo_folder: "/grid/martienssen/home/jcahn/nlsas/projects/epicbutton"
+repo_folder: "/grid/martienssen/home/jcahn/nlsas/projects/fpicbutton"
 repo_folder_rule: "path/to/epigeneticbutton/repo"
 
 # Name of the run
@@ -9,7 +9,7 @@ analysis_name: "test_smk"
 full_analysis: true
 
 # Path to the sample metadata file
-sample_file: "config/samples.tsv"
+sample_file: "config/RNA_samples.tsv"
 
 # Path to the directory containing reference genomes
 ref_path: "/grid/martienssen/home/jcahn/nlsas/Genomes/Arabidopsis"
