--- a/config/config.yaml
+++ b/config/config.yaml
@@ -136,7 +136,7 @@ srna_min_size: 21 # these sizes in nucleotide will be used for filtering bigiwg 
 srna_max_size: 24 # these sizes in nucleotide will be used for filtering bigiwg and creating an individual file for each nucleotide size in between (e.g. 20 21 22 23 24)
 
 # Gene Ontology files to create a new database (make sure you match the reference genome(s) present in the samplefile)
-GO: true # If switching to true, make sure the database is created, or the required files below are edited
+GO: false # If switching to true, make sure the database is created, or the required files below are edited
 gaf_file:
   ColCEN: "data/ColCEN_infoGO.tab.gz" # can be gzipped or not
   B73_v5: "data/B73_v5_infoGO.tab.gz" # can be gzipped or not
