--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -48,6 +48,7 @@ idr_analysis_replicates: *single
 merging_chip_replicates: *heavy
 making_pseudo_replicates: *heavy
 best_peaks_pseudoreps: *low
+find_motifs_in_peaks: *heavy
 make_peak_stats: *low
 make_bismark_indices: *heavy
 bismark_map_pe: *max
