--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -51,7 +51,7 @@ def sample_name_str(d, string):
 # Add a sample_name column to the sample file
 samples["sample_name"] = samples.apply(lambda row: sample_name_str(row, 'sample'), axis=1)
 
-# Function to extract extra information from data_Type (either the name of the TF, or the ChIP Input grouping if it exists)
+# Function to extract extra information from data_type (either the name of the TF, or the ChIP Input grouping if it exists)
 def extract_extra_info(d):
     parts=d['data_type'].split("_", 1)
     if len(parts) == 2 and parts[0] in ["ChIP", "TF"]:
