--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -162,6 +162,7 @@ include: "rules/RNAseq.smk"
 include: "rules/mC.smk"
 include: "rules/smallRNA.smk"
 include: "rules/plotting_with_R.smk"
+include: "rules/combined_analysis.smk"
 
 # Rule all to specify final target
 rule all:
