--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -83,3 +83,5 @@ make_srna_stranded_bigwigs: *standard
 analyze_all_srna_samples_on_target_file: *heavy
 prep_files_for_differential_srna_clusters: *single
 call_all_differential_srna_clusters: *single
+combine_peakfiles: *low
+get_annotations_for_bedfile: *low
