--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -99,3 +99,5 @@ plotting_srna_sizes_stats: *low
 combine_peakfiles: *low
 get_annotations_for_bedfile: *low
 plotting_upset_peaks: *low
+making_deeptools_matrix_on_targetfile: *heavy
+plotting_heatmap_on_targetfile: *single
